--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -41,7 +41,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm start
+        run: gulp build
 
       - name: Setup Pages
         uses: actions/configure-pages@v2
